--- a/Angular2_CLI_Full_Project/package.json
+++ b/Angular2_CLI_Full_Project/package.json
@@ -16,29 +16,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
-    "@angular/upgrade": "2.0.0",
+    "@angular/common": "2.0.2",
+    "@angular/compiler": "2.0.2",
+    "@angular/core": "2.0.2",
+    "@angular/forms": "2.0.2",
+    "@angular/http": "2.0.2",
+    "@angular/platform-browser": "2.0.2",
+    "@angular/platform-browser-dynamic": "2.0.2",
+    "@angular/router": "3.0.2",
+    "@angular/upgrade": "2.0.2",
     "core-js": "^2.4.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "0.6.25",
 
     "chart.js": "^2.3.0",
-    "ng2-bootstrap": "^1.1.5",
-    "ng2-charts": "^1.3.0",
+    "ng2-bootstrap": "^1.1.11",
+    "ng2-charts": "^1.4.0",
     "moment": "^2.15.1"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.2.34",
-    "angular-cli": "1.0.0-beta.15",
-    "codelyzer": "~0.0.26",
+    "@types/jasmine": "^2.5.35",
+    "angular-cli": "1.0.0-beta.17",
+    "codelyzer": "1.0.0-beta.0",
     "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "2.7.0",
     "karma": "1.3.0",
@@ -46,7 +46,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.9",
-    "ts-node": "1.3.0",
+    "ts-node": "1.4.1",
     "tslint": "^3.15.1",
     "typescript": "^2.0.3"
   }
