--- a/Angular2_CLI_Starter/package.json
+++ b/Angular2_CLI_Starter/package.json
@@ -16,28 +16,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.1.1",
-    "@angular/compiler": "2.1.1",
-    "@angular/core": "2.1.1",
-    "@angular/forms": "2.1.1",
-    "@angular/http": "2.1.1",
-    "@angular/platform-browser": "2.1.1",
-    "@angular/platform-browser-dynamic": "2.1.1",
-    "@angular/router": "3.1.1",
-    "@angular/upgrade": "2.1.1",
+    "@angular/common": "2.1.2",
+    "@angular/compiler": "2.1.2",
+    "@angular/core": "2.1.2",
+    "@angular/forms": "2.1.2",
+    "@angular/http": "2.1.2",
+    "@angular/platform-browser": "2.1.2",
+    "@angular/platform-browser-dynamic": "2.1.2",
+    "@angular/router": "3.1.2",
+    "@angular/upgrade": "2.1.2",
     "core-js": "2.4.1",
     "rxjs": "5.0.0-rc.1",
     "ts-helpers": "1.1.2",
     "zone.js": "0.6.26",
 
     "chart.js": "2.3.0",
-    "ng2-bootstrap": "1.1.14",
-    "ng2-charts": "1.4.0",
+    "ng2-bootstrap": "1.1.16",
+    "ng2-charts": "1.4.1",
     "moment": "2.15.2"
   },
   "devDependencies": {
-    "@types/jasmine": "2.5.35",
-    "angular-cli": "1.0.0-beta.18",
+    "@types/jasmine": "2.5.37",
+    "angular-cli": "1.0.0-beta.19-3",
     "codelyzer": "1.0.0-beta.3",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.7.0",
@@ -45,8 +45,8 @@
     "karma-chrome-launcher": "2.0.0",
     "karma-jasmine": "1.0.2",
     "karma-remap-istanbul": "0.2.1",
-    "protractor": "4.0.9",
-    "ts-node": "1.6.0",
+    "protractor": "4.0.10",
+    "ts-node": "1.6.1",
     "tslint": "3.15.1",
     "typescript": "2.0.6"
   }
