--- a/Aurelia_Full_Esnext_Webpack/package.json
+++ b/Aurelia_Full_Esnext_Webpack/package.json
@@ -97,6 +97,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "moment": "^2.17.0",
+    "numeral": "^1.5.6",
     "simple-line-icons": "^2.4.1",
     "tether": "latest"
   },
