--- a/React_Starter/package.json
+++ b/React_Starter/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "homepage": ".",
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-sass": "^2.3.2",
     "react-scripts": "0.8.5"
   },
   "dependencies": {
