--- a/Angular2_CLI_Starter/package.json
+++ b/Angular2_CLI_Starter/package.json
@@ -36,7 +36,7 @@
     "moment": "2.17.1"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-beta.32.3",
+    "@angular/cli": "1.0.0-rc.0",
     "@angular/compiler-cli": "2.4.8",
     "@types/jasmine": "2.5.43",
     "@types/node": "7.0.5",
@@ -51,7 +51,7 @@
     "karma-coverage-istanbul-reporter": "0.2.3",
     "protractor": "5.1.1",
     "ts-node": "2.1.0",
-    "tslint": "4.4.2",
+    "tslint": "4.5.0",
     "typescript": "2.2.1"
   }
 }
