--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coreui",
+  "name": "coreui.io",
   "version": "1.0.0-alpha.4",
   "description": "Open Source Bootstrap Admin Template",
   "main": "",
@@ -31,7 +31,7 @@
     "Vuejs",
     "React",
     "React.js",
-    "Reactjs",
+    "Reactjs"
   ],
   "author": "Łukasz Holeczek",
   "license": "MIT",
