--- a/React_Starter/package.json
+++ b/React_Starter/package.json
@@ -1,24 +1,24 @@
 {
   "name": "coreui-react",
-  "version": "1.0.0-alpha.5",
+  "version": "1.0.0-alpha.6",
   "private": true,
   "homepage": ".",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.3.2",
-    "react-scripts": "0.9.5"
+    "react-scripts": "1.0.6"
   },
   "dependencies": {
     "chart.js": "2.5.0",
+    "history": "^4.6.1",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "15.5.2",
     "react-addons-transition-group": "15.5.2",
-    "react-breadcrumbs": "1.6.6",
-    "react-chartjs-2": "2.0.5",
+    "react-chartjs-2": "2.1.0",
     "react-dom": "15.5.4",
-    "react-router": "3.0.5",
-    "reactstrap": "4.5.0"
+    "react-router-dom": "4.1.1",
+    "reactstrap": "4.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
