--- a/AJAX_Starter_GULP/bower.json
+++ b/AJAX_Starter_GULP/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "CoreUI",
-  "version": "1.0.0-alpha.5 (jQuery & Static Version)",
+  "name": "coreui-ajax",
+  "version": "1.0.0-alpha.6",
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "tether": "latest",
