--- a/Vue_Starter/package.json
+++ b/Vue_Starter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coreui-vue",
-  "version": "1.0.0-alpha.5",
+  "version": "1.0.0-alpha.6",
   "description": "Open Source Admin Template",
   "author": "Łukasz Holeczek <lukasz@holeczek.pl>",
   "private": true,
@@ -14,42 +14,44 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "vue": "2.2.6",
+    "vue": "2.3.3",
     "chart.js": "2.5.0",
-    "vue-chartjs": "2.6.1",
-    "vue-router": "2.4.0",
+    "vue-chartjs": "2.6.3",
+    "vue-router": "2.5.3",
     "vue-strap": "github:wffranco/vue-strap"
   },
   "devDependencies": {
-    "autoprefixer": "6.7.7",
+    "autoprefixer": "7.1.1",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
     "babel-loader": "7.0.0",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
+    "babel-preset-env": "1.5.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-register": "6.24.1",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "0.28.0",
+    "css-loader": "0.28.2",
     "eslint": "3.19.0",
-    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-friendly-formatter": "3.0.0",
     "eslint-loader": "1.7.1",
-    "eslint-plugin-html": "^2.0.0",
-    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-html": "2.0.3",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-node": "4.2.2",
+    "eslint-config-standard": "10.2.1",
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "3.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "4.15.2",
+    "express": "4.15.3",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
     "friendly-errors-webpack-plugin": "1.6.1",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "0.17.4",
-    "webpack-bundle-analyzer": "2.4.0",
-    "cross-env": "4.0.0",
-    "karma": "1.6.0",
+    "webpack-bundle-analyzer": "2.8.2",
+    "cross-env": "5.0.0",
+    "karma": "1.7.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "1.0.4",
@@ -59,28 +61,28 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "2.0.3",
     "lolex": "^1.5.2",
-    "mocha": "^3.2.0",
+    "mocha": "3.4.1",
     "chai": "^3.5.0",
-    "sinon": "2.1.0",
-    "sinon-chai": "2.9.0",
+    "sinon": "2.3.1",
+    "sinon-chai": "2.10.0",
     "inject-loader": "3.0.0",
-    "babel-plugin-istanbul": "4.1.1",
+    "babel-plugin-istanbul": "4.1.3",
     "phantomjs-prebuilt": "^2.1.14",
     "chromedriver": "2.29.0",
     "cross-spawn": "^5.0.1",
-    "nightwatch": "0.9.14",
+    "nightwatch": "0.9.15",
     "selenium-server": "3.4.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "1.3.1",
+    "opn": "5.0.0",
+    "optimize-css-assets-webpack-plugin": "1.3.2",
     "ora": "1.2.0",
     "rimraf": "^2.6.0",
     "url-loader": "^0.5.7",
-    "vue-loader": "11.3.4",
-    "vue-style-loader": "3.0.0",
-    "vue-template-compiler": "2.2.6",
-    "webpack": "2.4.1",
+    "vue-loader": "12.1.0",
+    "vue-style-loader": "3.0.1",
+    "vue-template-compiler": "2.3.3",
+    "webpack": "2.6.0",
     "webpack-dev-middleware": "1.10.2",
     "webpack-hot-middleware": "2.18.0",
     "webpack-merge": "4.1.0"
