--- a/Angular4_CLI_Starter/package.json
+++ b/Angular4_CLI_Starter/package.json
@@ -16,33 +16,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "4.2.5",
-    "@angular/compiler": "4.2.5",
-    "@angular/core": "4.2.5",
-    "@angular/forms": "4.2.5",
-    "@angular/http": "4.2.5",
-    "@angular/platform-browser": "4.2.5",
-    "@angular/platform-browser-dynamic": "4.2.5",
-    "@angular/router": "4.2.5",
-    "@angular/upgrade": "4.2.5",
-    "core-js": "2.4.1",
-    "rxjs": "5.4.1",
+    "@angular/common": "4.3.3",
+    "@angular/compiler": "4.3.3",
+    "@angular/core": "4.3.3",
+    "@angular/forms": "4.3.3",
+    "@angular/http": "4.3.3",
+    "@angular/platform-browser": "4.3.3",
+    "@angular/platform-browser-dynamic": "4.3.3",
+    "@angular/router": "4.3.3",
+    "@angular/upgrade": "4.3.3",
+    "core-js": "2.5.0",
+    "rxjs": "5.4.2",
     "ts-helpers": "1.1.2",
-    "zone.js": "0.8.12",
-
+    "zone.js": "0.8.16",
     "chart.js": "2.6.0",
-    "ngx-bootstrap": "1.7.1",
+    "ngx-bootstrap": "1.8.1",
     "ng2-charts": "1.6.0",
     "moment": "2.18.1"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.0",
-    "@angular/compiler-cli": "4.2.5",
+    "@angular/cli": "1.3.0",
+    "@angular/compiler-cli": "4.3.3",
     "@types/jasmine": "2.5.53",
-    "@types/node": "8.0.7",
-    "codelyzer": "3.1.1",
-    "jasmine-core": "2.6.4",
-    "jasmine-spec-reporter": "4.1.1",
+    "@types/node": "8.0.20",
+    "codelyzer": "3.1.2",
+    "jasmine-core": "2.7.0",
+    "jasmine-spec-reporter": "4.2.0",
     "karma": "1.7.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
@@ -50,8 +49,12 @@
     "karma-jasmine-html-reporter": "0.2.2",
     "karma-coverage-istanbul-reporter": "1.3.0",
     "protractor": "5.1.2",
-    "ts-node": "3.1.0",
-    "tslint": "5.4.3",
-    "typescript": "2.4.0"
+    "ts-node": "3.3.0",
+    "tslint": "5.6.0",
+    "typescript": "2.4.2"
+  },
+  "engines": {
+    "node": ">= 6.9.0",
+    "npm": ">= 3.0.0"
   }
 }
