--- a/Vue_Full_Project/package.json
+++ b/Vue_Full_Project/package.json
@@ -14,43 +14,45 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "vue": "2.3.3",
-    "chart.js": "2.5.0",
-    "vue-chartjs": "2.6.3",
-    "vue-router": "2.5.3",
-    "vue-strap": "github:wffranco/vue-strap"
+    "bootstrap-vue": "0.18.0",
+    "chart.js": "2.6.0",
+    "vue": "2.4.2",
+    "vue-chartjs": "2.8.1",
+    "vue-router": "2.7.0",
+    "font-awesome": "^4.7.0",
+    "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
-    "autoprefixer": "7.1.1",
-    "babel-core": "6.24.1",
+    "autoprefixer": "7.1.2",
+    "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
-    "babel-loader": "7.0.0",
+    "babel-loader": "7.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "1.5.1",
+    "babel-preset-env": "1.6.0",
     "babel-preset-stage-2": "6.24.1",
     "babel-register": "6.24.1",
-    "chalk": "^1.1.3",
+    "chalk": "2.1.0",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "0.28.2",
-    "eslint": "3.19.0",
+    "css-loader": "0.28.4",
+    "eslint": "4.4.1",
     "eslint-friendly-formatter": "3.0.0",
-    "eslint-loader": "1.7.1",
-    "eslint-plugin-html": "2.0.3",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-node": "4.2.2",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-html": "3.1.1",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-node": "5.1.1",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "3.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "4.15.3",
-    "extract-text-webpack-plugin": "2.1.0",
-    "file-loader": "0.11.1",
+    "express": "4.15.4",
+    "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
     "friendly-errors-webpack-plugin": "1.6.1",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "2.30.1",
     "http-proxy-middleware": "0.17.4",
-    "webpack-bundle-analyzer": "2.8.2",
-    "cross-env": "5.0.0",
+    "webpack-bundle-analyzer": "2.9.0",
+    "cross-env": "5.0.3",
     "karma": "1.7.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -59,33 +61,35 @@
     "karma-sinon-chai": "1.3.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "2.0.3",
-    "lolex": "^1.5.2",
-    "mocha": "3.4.1",
-    "chai": "^3.5.0",
-    "sinon": "2.3.1",
-    "sinon-chai": "2.10.0",
-    "inject-loader": "3.0.0",
-    "babel-plugin-istanbul": "4.1.3",
+    "karma-webpack": "2.0.4",
+    "lolex": "2.1.2",
+    "mocha": "3.5.0",
+    "chai": "4.1.1",
+    "sinon": "3.0.0",
+    "sinon-chai": "2.12.0",
+    "inject-loader": "3.0.1",
+    "babel-plugin-istanbul": "4.1.4",
     "phantomjs-prebuilt": "^2.1.14",
-    "chromedriver": "2.29.0",
+    "chromedriver": "2.31.0",
     "cross-spawn": "^5.0.1",
-    "nightwatch": "0.9.15",
+    "nightwatch": "0.9.16",
     "selenium-server": "3.4.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "opn": "5.0.0",
-    "optimize-css-assets-webpack-plugin": "1.3.2",
-    "ora": "1.2.0",
+    "semver": "5.4.1",
+    "shelljs": "0.7.8",
+    "opn": "5.1.0",
+    "optimize-css-assets-webpack-plugin": "3.0.0",
+    "ora": "1.3.0",
     "rimraf": "^2.6.0",
-    "url-loader": "^0.5.7",
-    "vue-loader": "12.1.0",
+    "url-loader": "0.5.9",
+    "vue-loader": "13.0.3",
     "vue-style-loader": "3.0.1",
-    "vue-template-compiler": "2.3.3",
-    "webpack": "2.6.0",
-    "webpack-dev-middleware": "1.10.2",
-    "webpack-hot-middleware": "2.18.0",
-    "webpack-merge": "4.1.0"
+    "vue-template-compiler": "2.4.2",
+    "webpack": "3.4.1",
+    "webpack-dev-middleware": "1.12.0",
+    "webpack-hot-middleware": "2.18.2",
+    "webpack-merge": "4.1.0",
+    "node-sass": "4.5.3",
+    "sass-loader": "6.0.6"
   },
   "engines": {
     "node": ">= 4.0.0",
