--- a/React_Full_Project/package.json
+++ b/React_Full_Project/package.json
@@ -1,29 +1,54 @@
 {
   "name": "coreui-react",
   "version": "1.0.0-alpha.6",
+  "description": "CoreUI React Open Source Bootstrap Admin Template",
+  "author": "Łukasz Holeczek <lukasz@holeczek.pl>",
+  "url": "http://coreui.io",
+  "copyright": "Copyright 2017 creativeLabs Łukasz Holeczek",
+  "license": "MIT",
   "private": true,
   "homepage": ".",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-sass": "^2.3.2",
-    "react-scripts": "1.0.6"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-hot-loader": "^1.3.0",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "html-loader": "^0.5.0",
+    "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.5.3",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.6",
+    "source-list-map": "^2.0.0",
+    "style-loader": "^0.18.2",
+    "uglify-js": "^3.0.27",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
-    "chart.js": "2.5.0",
-    "history": "^4.6.1",
-    "react": "^15.5.4",
-    "react-addons-css-transition-group": "15.5.2",
-    "react-addons-transition-group": "15.5.2",
-    "react-chartjs-2": "2.1.0",
-    "react-dom": "15.5.4",
-    "react-router-dom": "4.1.1",
-    "reactstrap": "4.6.2"
+    "bootstrap": "^4.0.0-alpha.6",
+    "chart.js": "2.6.0",
+    "history": "4.6.3",
+    "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-addons-transition-group": "^15.6.0",
+    "react-chartjs-2": "2.5.5",
+    "react-dom": "^15.6.1",
+    "react-router-dom": "4.1.2",
+    "reactstrap": "^4.8.0",
+    "font-awesome": "^4.7.0",
+    "simple-line-icons": "^2.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "dev": "webpack -d --progress --watch",
+    "start": "webpack-dev-server --env.dev --open --hot --progress --colors --inline",
+    "build": "webpack -p --progress",
+    "clean": "rimraf ./build"
   }
 }
