--- a/React_Full_Project/package.json
+++ b/React_Full_Project/package.json
@@ -19,7 +19,7 @@
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
-    "html-loader": "^0.5.0",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "rimraf": "^2.6.1",
@@ -28,21 +28,21 @@
     "style-loader": "^0.18.2",
     "uglify-js": "^3.0.27",
     "url-loader": "^0.5.9",
-    "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.6.1"
+    "webpack": "^3.5.3",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta",
     "chart.js": "2.6.0",
+    "font-awesome": "^4.7.0",
     "history": "4.6.3",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
-    "react-chartjs-2": "2.5.5",
+    "react-chartjs-2": "2.5.6",
     "react-dom": "^15.6.1",
     "react-router-dom": "4.1.2",
     "reactstrap": "^4.8.0",
-    "font-awesome": "^4.7.0",
     "simple-line-icons": "^2.4.1"
   },
   "scripts": {
@@ -50,5 +50,9 @@
     "start": "webpack-dev-server --env.dev --open --hot --progress --colors --inline",
     "build": "webpack -p --progress",
     "clean": "rimraf ./build"
+  },
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 5.0.0"
   }
 }
