--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coreui.io",
+  "name": "@coreui/ajax",
   "version": "1.0.0",
   "description": "Open Source Bootstrap Admin Template",
   "main": "",
