--- a/Static_Full_Project_GULP/package.json
+++ b/Static_Full_Project_GULP/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coreui/static",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.html",
   "dependencies": {
@@ -16,6 +16,7 @@
     "browser-sync": "^2.16.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-bower-src": "^0.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-contains": "^1.1.0",
@@ -26,14 +27,22 @@
     "gulp-sass": "^3.1.0",
     "gulp-search": "^1.0.0",
     "gulp-uglify": "^3.0.0",
-    "gulp-web-dependencies": "^1.1.2",
-    "main-bower-files": "^2.13.1",
     "require-dir": "^0.3.2",
     "run-sequence": "^2.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "browserslist": [
+    "Chrome >= 45",
+    "Firefox ESR",
+    "Edge >= 12",
+    "Explorer >= 10",
+    "iOS >= 9",
+    "Safari >= 9",
+    "Android >= 4.4",
+    "Opera >= 30"
+  ],
   "author": "Łukasz Holeczek",
   "url": "http://coreui.io",
   "copyright": "Copyright 2016 creativeLabs Łukasz Holeczek",
