--- a/AJAX_Starter_GULP/package.json
+++ b/AJAX_Starter_GULP/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@coreui/ajax",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Open Source Bootstrap Admin Template",
   "main": "index.html",
   "dependencies": {
-    "bootstrap": "4.0.0-beta.3",
+    "bootstrap": "4.0.0",
     "chart.js": "2.7.1",
     "flag-icon-css": "2.9.0",
     "font-awesome": "4.7.0",
