docs: update readme and package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@coreui/admin-template-static",
-  "version": "2.0.0",
+  "name": "@coreui/bootstrap-admin-template",
+  "version": "2.0.0-alpha.1",
   "description": "Open Source Bootstrap Admin Template",
   "main": "index.html",
   "dependencies": {
@@ -39,6 +39,13 @@
     "serve": "gulp serve",
     "serve-dist": "gulp serve:dist"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/coreui/free-bootstrap-admin-template.git"
+  },
+  "bugs": {
+    "url": "https://github.com/coreui/free-bootstrap-admin-template/issues"
+  },
   "browserslist": [
     "Chrome >= 45",
     "Firefox ESR",
@@ -50,7 +57,10 @@
     "Opera >= 30"
   ],
   "author": "Łukasz Holeczek",
-  "homepage": "http://coreui.io",
+  "contributors": [
+    "Andrzej Kopański"
+  ],
+  "homepage": "https://coreui.io",
   "copyright": "Copyright 2018 creativeLabs Łukasz Holeczek",
   "license": "MIT"
 }
