feat: chart.js custom tooltips

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@coreui/bootstrap-admin-template",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0-alpha.2",
   "description": "Open Source Bootstrap Admin Template",
   "main": "index.html",
   "dependencies": {
     "@coreui/static": "^2.0.0-alpha.1",
     "@coreui/styles": "^2.0.0-alpha.1",
     "bootstrap": "4.0.0",
-    "chart.js": "2.7.1",
+    "chart.js": "^2.7.2",
     "flag-icon-css": "2.9.0",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
