refactor: add @coreui/core

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Open Source Bootstrap Admin Template",
   "main": "index.html",
   "dependencies": {
-    "@coreui/static": "^2.0.0-alpha.1",
-    "@coreui/styles": "^2.0.0-alpha.1",
+    "@coreui/core": "^2.0.0-alpha.1",
     "bootstrap": "4.0.0",
     "chart.js": "^2.7.2",
     "flag-icon-css": "2.9.0",
