--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "@coreui/bootstrap-admin-template",
-  "version": "2.0.0-alpha.3",
+  "version": "2.0.0-alpha.4",
   "description": "Open Source Bootstrap Admin Template",
   "main": "index.html",
   "dependencies": {
-    "@coreui/core": "^2.0.0-alpha.1",
+    "@coreui/core": "^2.0.0-beta.0",
+    "@coreui/plugin-chartjs-custom-tooltips": "0.0.1",
     "bootstrap": "4.0.0",
     "chart.js": "^2.7.2",
-    "flag-icon-css": "2.9.0",
+    "flag-icon-css": "3.0.0",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
+    "lstat": "^1.0.0",
     "pace-progress": "1.0.2",
+    "perfect-scrollbar": "^1.3.0",
     "popper.js": "1.12.9",
     "simple-line-icons": "2.4.1"
   },
   "devDependencies": {
     "browser-sync": "2.23.6",
+    "copyfiles": "^2.0.0",
     "del": "3.0.0",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "4.1.0",
@@ -29,14 +33,22 @@
     "gulp-sass": "3.1.0",
     "gulp-search": "1.0.0",
     "gulp-uglify": "3.0.0",
+    "html-loader": "^0.5.5",
+    "npm-run-all": "^4.1.2",
     "require-dir": "0.3.2",
-    "run-sequence": "2.2.1"
+    "rimraf": "^2.6.2",
+    "run-sequence": "2.2.1",
+    "shelljs": "^0.8.1"
   },
   "scripts": {
+    "build": "npm-run-all build-clean build-copy build-vendors",
+    "build-clean": "rimraf dist",
+    "build-copy": "copyfiles -a -e \"src/scss/**/*\" -u 1 \"src/**/*\" dist/",
+    "build-vendors": "node build/vendors.js",
     "gulp": "gulp",
-    "build": "gulp build:dist",
     "serve": "gulp serve",
-    "serve-dist": "gulp serve:dist"
+    "serve-dist": "gulp serve:dist",
+    "webpack": "webpack -p --progress --env.prod"
   },
   "repository": {
     "type": "git",
