chore: moved all gulp scripts to node

--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "flag-icon-css": "3.0.0",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
-    "lstat": "^1.0.0",
     "pace-progress": "1.0.2",
     "perfect-scrollbar": "^1.3.0",
     "popper.js": "1.12.9",
@@ -19,36 +18,40 @@
   },
   "devDependencies": {
     "browser-sync": "2.23.6",
+    "clean-css-cli": "^4.1.11",
     "copyfiles": "^2.0.0",
     "del": "3.0.0",
-    "gulp": "3.9.1",
-    "gulp-autoprefixer": "4.1.0",
-    "gulp-bower-src": "0.1.0",
-    "gulp-concat": "2.6.1",
-    "gulp-contains": "1.1.0",
-    "gulp-cssmin": "0.2.0",
-    "gulp-filter": "5.1.0",
-    "gulp-rename": "1.2.2",
-    "gulp-replace": "0.6.1",
-    "gulp-sass": "3.1.0",
-    "gulp-search": "1.0.0",
-    "gulp-uglify": "3.0.0",
-    "html-loader": "^0.5.5",
+    "foreach-cli": "^1.8.0",
+    "node-sass": "^4.8.3",
+    "nodemon": "^1.17.2",
     "npm-run-all": "^4.1.2",
+    "postcss-cli": "^5.0.0",
     "require-dir": "0.3.2",
     "rimraf": "^2.6.2",
     "run-sequence": "2.2.1",
-    "shelljs": "^0.8.1"
+    "shelljs": "^0.8.1",
+    "stylelint": "^9.1.3",
+    "stylelint-config-recommended-scss": "^3.1.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-order": "^0.8.1",
+    "stylelint-scss": "^2.5.0"
   },
   "scripts": {
     "build": "npm-run-all build-clean build-copy build-vendors",
     "build-clean": "rimraf dist",
     "build-copy": "copyfiles -a -e \"src/scss/**/*\" -u 1 \"src/**/*\" dist/",
     "build-vendors": "node build/vendors.js",
-    "gulp": "gulp",
-    "serve": "gulp serve",
-    "serve-dist": "gulp serve:dist",
-    "webpack": "webpack -p --progress --env.prod"
+    "css": "npm-run-all --parallel css-compile* --sequential css-prefix css-minify*",
+    "css-compile": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 src/scss/style.scss src/css/style.css",
+    "css-compile-vendors": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 --recursive --output src/vendors/css src/scss/vendors/**/*",
+    "css-lint": "stylelint --config build/.stylelintrc --syntax scss \"src/scss/**/*.scss\"",
+    "css-minify": "cleancss --level 1 --source-map --source-map-inline-sources --output src/css/style.min.css src/css/style.css",
+    "css-minify-vendors": "foreach -g \"src/vendors/css/**/*.css\" -i \"src/vendors/css/**/*.min.css\" -x \"cleancss --level 1 --source-map --source-map-inline-sources #{path} --output #{dir}/#{name}.min#{ext}\" --no-c",
+    "css-prefix": "postcss --config build/postcss.config.js --replace \"src/css/*.css\" \"!src/css/*.min.css\"",
+    "css-prefix-vendors": "postcss --config build/postcss.config.js --replace \"src/vendors/css/**/*.css\" \"!src/vendors/css/**/*.css\"",
+    "localhost": "browser-sync start --server \"./src\" --serveStatic \"./\" --files \"./src/**/*, !./src/scss/**/*\"",
+    "serve": "npm-run-all --parallel localhost watch-css",
+    "watch-css": "nodemon --ignore dist/ -e scss -x \"npm run css\""
   },
   "repository": {
     "type": "git",
