docs: update version & description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@coreui/bootstrap-admin-template",
-  "version": "2.0.0-alpha.4",
-  "description": "Open Source Bootstrap Admin Template",
+  "version": "2.0.0-beta.0",
+  "description": "Free Bootstrap Admin Template",
   "main": "index.html",
   "dependencies": {
     "@coreui/core": "^2.0.0-beta.0",
