chore: update scripts

--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "build-vendors": "node build/vendors.js",
     "css": "npm-run-all --parallel css-compile* --sequential css-prefix css-minify*",
     "css-compile": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 src/scss/style.scss src/css/style.css",
-    "css-compile-vendors": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 --recursive --output src/vendors/css src/scss/vendors/**/*",
+    "css-compile-vendors": "foreach -g \"src/scss/vendors/**/*.scss\" -i \"src/scss/vendors/**/_*.scss\" -x \"node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 --output src/vendors/css/ #{path}\" --no-c",
     "css-lint": "stylelint --config build/.stylelintrc --syntax scss \"src/scss/**/*.scss\"",
     "css-minify": "cleancss --level 1 --source-map --source-map-inline-sources --output src/css/style.min.css src/css/style.css",
-    "css-minify-vendors": "foreach -g \"src/vendors/css/**/*.css\" -i \"src/vendors/css/**/*.min.css\" -x \"cleancss --level 1 --source-map --source-map-inline-sources #{path} --output #{dir}/#{name}.min#{ext}\" --no-c",
+    "css-minify-vendors": "foreach -g \"src/vendors/css/*.css\" -i \"src/vendors/css/*.min.css\" -x \"cleancss --level 1 --source-map --source-map-inline-sources #{path} --output #{dir}/#{name}.min#{ext}\" --no-c",
     "css-prefix": "postcss --config build/postcss.config.js --replace \"src/css/*.css\" \"!src/css/*.min.css\"",
     "css-prefix-vendors": "postcss --config build/postcss.config.js --replace \"src/vendors/css/**/*.css\" \"!src/vendors/css/**/*.css\"",
     "js": "npm-run-all --parallel js-compile* js-lint*",
@@ -76,9 +76,9 @@
     "simple-line-icons": "2.4.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.42",
-    "@babel/core": "^7.0.0-beta.42",
-    "@babel/preset-env": "^7.0.0-beta.42",
+    "@babel/cli": "^7.0.0-beta.44",
+    "@babel/core": "^7.0.0-beta.44",
+    "@babel/preset-env": "^7.0.0-beta.44",
     "autoprefixer": "^8.2.0",
     "babel-eslint": "^8.2.2",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
@@ -93,7 +93,6 @@
     "nodemon": "^1.17.2",
     "npm-run-all": "^4.1.2",
     "postcss-cli": "^5.0.0",
-    "require-dir": "0.3.2",
     "rimraf": "^2.6.2",
     "run-sequence": "2.2.1",
     "shelljs": "^0.8.1",
