--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "watch-js": "nodemon --watch src/js/src/ -x \"npm run js\""
   },
   "dependencies": {
-    "@coreui/coreui": "^2.0.0-beta.1",
+    "@coreui/coreui": "^2.0.0-beta.2",
     "@coreui/plugin-chartjs-custom-tooltips": "0.0.1",
     "bootstrap": "4.0.0",
     "chart.js": "^2.7.2",
@@ -78,6 +78,7 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.44",
     "@babel/core": "^7.0.0-beta.44",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.44",
     "@babel/preset-env": "^7.0.0-beta.44",
     "autoprefixer": "^8.2.0",
     "babel-eslint": "^8.2.2",
