--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coreui/coreui-free-bootstrap-admin-template",
-  "version": "2.0.0-beta.5",
+  "version": "2.0.0-rc.0",
   "description": "Free Bootstrap Admin Template",
   "keywords": [
     "admin",
@@ -63,34 +63,34 @@
     "watch-js": "nodemon --watch src/js/src/ -x \"npm run js\""
   },
   "dependencies": {
-    "@coreui/coreui": "^2.0.0-beta.9",
-    "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.0.0",
+    "@coreui/coreui": "^2.0.0-rc.0",
+    "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
     "bootstrap": "4.1.0",
     "chart.js": "^2.7.2",
     "flag-icon-css": "3.0.0",
     "font-awesome": "4.7.0",
-    "jquery": "3.2.1",
+    "jquery": "3.3.1",
     "pace-progress": "1.0.2",
     "perfect-scrollbar": "^1.3.0",
     "popper.js": "1.14.3",
     "simple-line-icons": "2.4.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.44",
-    "@babel/core": "^7.0.0-beta.44",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.44",
-    "@babel/preset-env": "^7.0.0-beta.44",
-    "autoprefixer": "^8.3.0",
+    "@babel/cli": "^7.0.0-beta.46",
+    "@babel/core": "^7.0.0-beta.46",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
+    "@babel/preset-env": "^7.0.0-beta.46",
+    "autoprefixer": "^8.4.1",
     "babel-eslint": "^8.2.3",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
-    "browser-sync": "2.23.6",
+    "browser-sync": "2.24.1",
     "clean-css-cli": "^4.1.11",
     "copyfiles": "^2.0.0",
     "cross-env": "^5.1.4",
     "eslint": "^4.19.1",
     "eslint-plugin-compat": "^2.2.0",
     "foreach-cli": "^1.8.0",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.0",
     "nodemon": "^1.17.3",
     "npm-run-all": "^4.1.2",
     "postcss-cli": "^5.0.0",
@@ -100,7 +100,7 @@
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^0.8.1",
-    "stylelint-scss": "^3.0.0"
+    "stylelint-scss": "^3.1.0"
   },
   "engines": {
     "node": ">=6"
