update project dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coreui/coreui-free-bootstrap-admin-template",
-  "version": "2.0.0-rc.1",
+  "version": "2.0.0",
   "description": "Free Bootstrap Admin Template",
   "keywords": [
     "admin",
@@ -61,7 +61,7 @@
     "watch-js": "nodemon --watch src/js/src/ -x \"npm run js\""
   },
   "dependencies": {
-    "@coreui/coreui": "^2.0.0-rc.2",
+    "@coreui/coreui": "2.0.0",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
     "bootstrap": "4.1.1",
     "chart.js": "^2.7.2",
