--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "@coreui/coreui": "2.0.0",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
+    "@coreui/icons": "^0.1.1",
     "bootstrap": "4.1.1",
     "chart.js": "^2.7.2",
     "flag-icon-css": "3.0.0",
