feat: add pug support

--- a/package.json
+++ b/package.json
@@ -60,19 +60,19 @@
     "serve": "npm-run-all --parallel localhost watch-css watch-js",
     "watch-css": "nodemon --ignore dist/ -e scss -x \"npm run css\"",
     "watch-js": "nodemon --watch src/js/src/ -x \"npm run js\"",
-    "watch-pug": "nodemon --watch pug/ -x \"npm run pug\""
+    "watch-pug": "nodemon -e pug -x \"npm run pug\""
   },
   "dependencies": {
-    "@coreui/coreui": "2.0.0",
+    "@coreui/coreui": "2.0.3",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
-    "@coreui/icons": "^0.1.1",
+    "@coreui/icons": "0.3.0",
     "bootstrap": "4.1.1",
     "chart.js": "^2.7.2",
     "flag-icon-css": "3.0.0",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
     "pace-progress": "1.0.2",
-    "perfect-scrollbar": "^1.3.0",
+    "perfect-scrollbar": "1.4.0",
     "popper.js": "1.14.3",
     "simple-line-icons": "2.4.1"
   },
