Add missing dev dependency js-beautify.

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "eslint": "^4.19.1",
     "eslint-plugin-compat": "^2.2.0",
     "foreach-cli": "^1.8.0",
+    "js-beautify": "^1.7.5",
     "node-sass": "^4.9.0",
     "nodemon": "^1.17.4",
     "npm-run-all": "^4.1.3",
