--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "eslint": "^5.5.0",
     "eslint-plugin-compat": "^2.5.1",
     "foreach-cli": "^1.8.0",
+    "js-beautify": "^1.8.4",
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
