chore: update build scripts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@coreui/coreui-free-bootstrap-admin-template",
-  "version": "3.0.0-alpha.1",
-  "description": "Free Bootstrap Admin Template Ajax",
+  "version": "3.0.0-alpha.0",
+  "description": "Free Bootstrap Admin Template",
   "keywords": [
     "admin",
     "admin panel",
@@ -40,33 +40,46 @@
     "url": "git+https://github.com/coreui/coreui-free-bootstrap-admin-template.git"
   },
   "scripts": {
-    "build": "npm-run-all css js build-clean build-copy build-vendors",
+    "build": "npm-run-all build-clean --parallel css js copy --sequential build-vendors svg",
     "build-clean": "rimraf dist",
-    "build-copy": "copyfiles -a -e \"src/scss/**/*\" -u 1 \"src/**/*\" dist/",
+    "build-copy": "copyfiles -a -e \"src/scss/**/*\" -e \"src/css/**/*\" -e \"src/js/**/*\" -u 1 \"src/**/*\" dist/",
     "build-vendors": "node build/vendors.js",
+    "copy": "npm-run-all --parallel copy-*",
+    "copy-assets": "copyfiles -a -u 1 \"src/assets/**/*\" dist/",
+    "copy-views": "copyfiles -a -u 1 \"src/**/*.html\" dist/",
     "css": "npm-run-all --parallel css-compile* --sequential css-prefix css-minify*",
-    "css-compile": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 src/scss/style.scss src/css/style.css",
+    "css-compile": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 8 src/scss/style.scss dist/css/style.css",
     "css-compile-vendors": "node build/vendors-sass.js",
     "css-lint": "stylelint --config build/.stylelintrc --syntax scss \"src/scss/**/*.scss\"",
-    "css-minify": "cleancss --level 1 --source-map --source-map-inline-sources --output src/css/style.min.css src/css/style.css",
-    "css-prefix": "postcss --config build/postcss.config.js --replace \"src/css/*.css\" \"!src/css/*.min.css\"",
-    "inline": "inline-source --compress true --root ./dist/ dist/index.html",
-    "js": "npm-run-all --parallel js-compile* js-lint*",
-    "js-compile": "cross-env PLUGINS=true babel src/js/src/ --out-dir src/js/ --source-maps",
+    "css-minify": "cleancss --level 1 --source-map --source-map-inline-sources --output dist/css/style.min.css dist/css/style.css",
+    "css-prefix": "postcss --config build/postcss.config.js --replace \"dist/css/*.css\" \"!dist/css/*.min.css\"",
+    "js": "npm-run-all --parallel js-compile* ",
+    "js-compile": "cross-env PLUGINS=true babel src/js/ --out-dir dist/js/ --source-maps",
     "js-lint": "eslint src/js/src",
-    "localhost": "browser-sync start --server \"./src\" --serveStatic \"./\" --files \"!./src/js/src/**/*, ./src/**/*, !./src/scss/**/*\"",
-    "localhost-dist": "browser-sync start --server \"./dist\"",
-    "pug": "node build/pug.js static",
+    "js-minify": "foreach -g \"dist/js/**/*.js\" -x \"uglifyjs --compress typeofs=false --mangle  --source-map \"content=src/js/#{name}.js.map,includeSources,url=#{name}.min.js.map\" --output dist/js/#{name}.min.js dist/js/#{name}.js\"",
+    "localhost": "browser-sync start --server \"./dist\" --serveStatic \"./\" --files \"./dist/**/*, !./dist/**/*.html, !./dist/vendors/**/*\"",
+    "localhost-reload": "browser-sync reload",
+    "pug": "npm-run-all --parallel pug-*",
+    "pug-dist": "node build/pug.js --src pug/ --dest dist/ --injectVendors true --injectSvg true",
+    "pug-src": "node build/pug.js --src pug/ --dest src/",
     "release-version": "node build/change-version.js",
-    "serve": "npm-run-all --parallel localhost watch-css watch-js",
-    "watch-css": "nodemon --ignore dist/ -e scss -x \"npm run css\"",
-    "watch-js": "nodemon --watch src/js/src/ -x \"npm run js\"",
-    "watch-pug": "nodemon -e pug -x \"npm run pug\""
+    "serve": "npm-run-all --sequential build svg localhost",
+    "svg": "node build/svg.js",
+    "sync-assets": "sync-glob --watch 'src/assets/**/*' dist/assets",
+    "test-dist": "browser-sync start --server \"./dist\"",
+    "watch": "npm run watch-html-source",
+    "watch-pug-source": "npm-run-all --parallel watch-pug sync-assets watch-js watch-css",
+    "watch-html-source": "npm-run-all --parallel sync-assets watch-views watch-js watch-css",
+    "watch-css": "nodemon -e scss -x \"npm run css\"",
+    "watch-js": "nodemon -e js -x \"npm run js\"",
+    "watch-pug": "node build/watch-pug.js",
+    "watch-views": "nodemon -e html -x \"npm-run-all --sequential copy-views build-vendors svg localhost-reload\""
   },
   "dependencies": {
-    "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.3.0",
-    "@coreui/icons": "0.3.0",
     "@coreui/coreui": "next",
+    "@coreui/coreui-chartjs": "2.0.0-alpha.0",
+    "@coreui/icons": "0.3.0",
+    "@iconfu/svg-inject": "^1.2.3",
     "@tanem/svg-injector": "^3.0.0",
     "chart.js": "^2.8.0",
     "flag-icon-css": "^3.3.0",
@@ -81,6 +94,8 @@
     "@babel/core": "^7.4.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "@coreui/svg-injector": "^1.0.0-alpha.2",
+    "@coreui/vendors-injector": "^1.0.0-alpha.1",
     "autoprefixer": "^9.5.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
@@ -95,10 +110,14 @@
     "eslint-plugin-unicorn": "^8.0.1",
     "foreach-cli": "^1.8.1",
     "js-beautify": "^1.10.0",
+    "jsdom": "^15.1.1",
+    "minimist": "^1.2.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.2",
+    "postcss-combine-duplicated-selectors": "^7.0.0",
+    "postcss-merge-rules": "^4.0.3",
     "pug": "^2.0.3",
     "rimraf": "^2.6.3",
     "shelljs": "^0.8.3",
@@ -106,7 +125,9 @@
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-order": "^3.0.0",
-    "stylelint-scss": "^3.6.1"
+    "stylelint-scss": "^3.6.1",
+    "sync-glob": "^1.4.0",
+    "xmldom": "^0.1.27"
   },
   "engines": {
     "node": ">=6"
