chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "watch-views": "nodemon -e html -x \"npm-run-all --sequential copy-views build-vendors svg localhost-reload\""
   },
   "dependencies": {
-    "@coreui/coreui": "next",
+    "@coreui/coreui": "3.0.0-alpha.13",
     "@coreui/coreui-chartjs": "2.0.0-alpha.0",
     "@coreui/icons": "0.4.1",
     "@fortawesome/fontawesome-free": "^5.10.2",
