--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "url": "git+https://github.com/coreui/coreui-free-bootstrap-admin-template.git"
   },
   "scripts": {
-    "build": "npm-run-all build-clean --parallel css js copy --sequential build-vendors svg",
+    "build": "npm-run-all build-clean --parallel css js copy --sequential build-vendors",
     "build-clean": "rimraf dist",
     "build-copy": "copyfiles -a -e \"src/scss/**/*\" -e \"src/css/**/*\" -e \"src/js/**/*\" -u 1 \"src/**/*\" dist/",
     "build-vendors": "node build/vendors.js",
@@ -60,10 +60,10 @@
     "localhost": "browser-sync start --server \"./dist\" --serveStatic \"./\" --files \"./dist/**/*, !./dist/**/*.html, !./dist/vendors/**/*\"",
     "localhost-reload": "browser-sync reload",
     "pug": "npm-run-all --parallel pug-*",
-    "pug-dist": "node build/pug.js --src pug/ --dest dist/ --injectVendors true --injectSvg true",
-    "pug-src": "node build/pug.js --src pug/ --dest src/",
+    "pug-dist": "node build/pug.js --src pug/ --dest dist/ --injectVendors false --injectSvg false",
+    "pug-src": "node build/pug.js --src pug/ --dest src/ --injectSvg false",
     "release-version": "node build/change-version.js",
-    "serve": "npm-run-all --sequential build svg localhost",
+    "serve": "npm-run-all --sequential build localhost",
     "svg": "node build/svg.js",
     "sync-assets": "sync-glob --watch 'src/assets/**/*' dist/assets",
     "test-dist": "browser-sync start --server \"./dist\"",
@@ -76,52 +76,52 @@
     "watch-views": "nodemon -e html -x \"npm-run-all --sequential copy-views build-vendors svg localhost-reload\""
   },
   "dependencies": {
-    "@coreui/coreui": "3.0.0-alpha.13",
-    "@coreui/coreui-chartjs": "2.0.0-alpha.0",
+    "@coreui/coreui": "3.0.0-beta.1",
+    "@coreui/coreui-chartjs": "2.0.0-alpha.1",
     "@coreui/icons": "0.4.1",
-    "@fortawesome/fontawesome-free": "^5.10.2",
-    "chart.js": "^2.8.0",
-    "flag-icon-css": "^3.3.0",
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "chart.js": "^2.9.1",
+    "flag-icon-css": "^3.4.5",
     "pace-progress": "1.0.2",
     "perfect-scrollbar": "1.4.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.0",
-    "@babel/core": "^7.6.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/preset-env": "^7.6.0",
-    "@coreui/svg-injector": "^1.0.0-alpha.2",
-    "@coreui/vendors-injector": "^1.0.0-alpha.1",
-    "autoprefixer": "^9.6.1",
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/preset-env": "^7.6.3",
+    "@coreui/svg-injector": "^1.0.0",
+    "@coreui/vendors-injector": "^1.0.0",
+    "autoprefixer": "^9.7.1",
     "babel-eslint": "^10.0.3",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
     "browser-sync": "^2.26.7",
     "chalk": "^2.4.2",
     "clean-css-cli": "^4.3.0",
     "copyfiles": "^2.1.1",
-    "cross-env": "^6.0.0",
-    "eslint": "^6.4.0",
-    "eslint-config-xo": "^0.26.0",
+    "cross-env": "^6.0.3",
+    "eslint": "^6.6.0",
+    "eslint-config-xo": "^0.27.2",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-unicorn": "^11.0.1",
+    "eslint-plugin-unicorn": "^12.1.0",
     "foreach-cli": "^1.8.1",
     "js-beautify": "^1.10.2",
-    "jsdom": "^15.1.1",
+    "jsdom": "^15.2.0",
     "minimist": "^1.2.0",
-    "node-sass": "^4.12.0",
-    "nodemon": "^1.19.2",
+    "node-sass": "^4.13.0",
+    "nodemon": "^1.19.4",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.3",
-    "postcss-combine-duplicated-selectors": "^8.0.2",
+    "postcss-combine-duplicated-selectors": "^8.0.3",
     "postcss-merge-rules": "^4.0.3",
     "pug": "^2.0.4",
     "rimraf": "^3.0.0",
     "shelljs": "^0.8.3",
-    "stylelint": "^11.0.0",
-    "stylelint-config-recommended-scss": "^3.3.0",
+    "stylelint": "^11.1.1",
+    "stylelint-config-recommended-scss": "^4.0.0",
     "stylelint-config-standard": "^19.0.0",
     "stylelint-order": "^3.1.1",
-    "stylelint-scss": "^3.11.0",
+    "stylelint-scss": "^3.12.0",
     "sync-glob": "^1.4.0"
   },
   "engines": {
