refactor: update icons and components to latest versions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coreui/coreui-free-bootstrap-admin-template",
-  "version": "3.0.0-alpha.1",
+  "version": "3.0.0-alpha.2",
   "description": "Free Bootstrap Admin Template",
   "keywords": [
     "admin",
@@ -76,27 +76,26 @@
     "watch-views": "nodemon -e html -x \"npm-run-all --sequential copy-views build-vendors svg localhost-reload\""
   },
   "dependencies": {
-    "@coreui/coreui": "3.0.0-beta.1",
-    "@coreui/coreui-chartjs": "2.0.0-alpha.1",
-    "@coreui/icons": "0.4.1",
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "chart.js": "^2.9.1",
+    "@coreui/coreui": "^3.0.0-beta.2",
+    "@coreui/coreui-chartjs": "^2.0.0-alpha.2",
+    "@coreui/icons": "^1.0.0-alpha.4",
+    "chart.js": "^2.9.2",
     "flag-icon-css": "^3.4.5",
     "pace-progress": "1.0.2",
     "perfect-scrollbar": "1.4.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-env": "^7.7.1",
     "@coreui/svg-injector": "^1.0.0",
-    "@coreui/vendors-injector": "^1.0.0",
+    "@coreui/vendors-injector": "^1.0.1",
     "autoprefixer": "^9.7.1",
     "babel-eslint": "^10.0.3",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
     "browser-sync": "^2.26.7",
-    "chalk": "^2.4.2",
+    "chalk": "^3.0.0",
     "clean-css-cli": "^4.3.0",
     "copyfiles": "^2.1.1",
     "cross-env": "^6.0.3",
@@ -106,7 +105,7 @@
     "eslint-plugin-unicorn": "^12.1.0",
     "foreach-cli": "^1.8.1",
     "js-beautify": "^1.10.2",
-    "jsdom": "^15.2.0",
+    "jsdom": "^15.2.1",
     "minimist": "^1.2.0",
     "node-sass": "^4.13.0",
     "nodemon": "^1.19.4",
@@ -121,7 +120,7 @@
     "stylelint-config-recommended-scss": "^4.0.0",
     "stylelint-config-standard": "^19.0.0",
     "stylelint-order": "^3.1.1",
-    "stylelint-scss": "^3.12.0",
+    "stylelint-scss": "^3.12.1",
     "sync-glob": "^1.4.0"
   },
   "engines": {
