--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coreui/coreui-free-bootstrap-admin-template",
-  "version": "3.0.0-alpha.2",
+  "version": "3.0.0-rc.0",
   "description": "Free Bootstrap Admin Template",
   "keywords": [
     "admin",
@@ -23,15 +23,15 @@
   },
   "license": "MIT",
   "author": {
-    "name": "Łukasz Holeczek",
-    "url": "http://holeczek.pl",
-    "github": "https://github.com/mrholek",
-    "twitter": "https://twitter.com/lukaszholeczek"
+    "name": "creativeLabs Łukasz Holeczek",
+    "url": "https://coreui.io",
+    "github": "https://github.com/coreui",
+    "twitter": "https://twitter.com/core_ui"
   },
   "contributors": [
     {
-      "name": "Andrzej Kopański",
-      "url": "https://github.com/xidedix"
+      "name": "CoreUI Core Team",
+      "url": "https://github.com/orgs/coreui/people"
     }
   ],
   "main": "src/index.html",
@@ -76,12 +76,11 @@
     "watch-views": "nodemon -e html -x \"npm-run-all --sequential copy-views build-vendors svg localhost-reload\""
   },
   "dependencies": {
-    "@coreui/coreui": "^3.0.0-beta.2",
-    "@coreui/coreui-chartjs": "^2.0.0-alpha.2",
-    "@coreui/icons": "^1.0.0-alpha.4",
+    "@coreui/coreui": "^3.0.0-rc.0",
+    "@coreui/chartjs": "^2.0.0",
+    "@coreui/icons": "^1.0.0",
+    "@coreui/utils": "^1.2.2",
     "chart.js": "^2.9.2",
-    "flag-icon-css": "^3.4.5",
-    "pace-progress": "1.0.2",
     "perfect-scrollbar": "1.4.0"
   },
   "devDependencies": {
