build: update scripts

--- a/package.json
+++ b/package.json
@@ -40,15 +40,16 @@
     "url": "git+https://github.com/coreui/coreui-free-bootstrap-admin-template.git"
   },
   "scripts": {
-    "build": "npm-run-all build-clean --parallel css js copy --sequential build-vendors",
+    "build": "npm run build-from-html",
     "build-clean": "rimraf dist",
-    "build-copy": "copyfiles -a -e \"src/scss/**/*\" -e \"src/css/**/*\" -e \"src/js/**/*\" -u 1 \"src/**/*\" dist/",
     "build-vendors": "node build/vendors.js",
+    "build-from-html": "npm-run-all build-clean --parallel css js copy --sequential build-vendors",
+    "build-from-pug": "npm-run-all build-clean --parallel css js copy-assets pug-dist --sequential build-vendors",
     "copy": "npm-run-all --parallel copy-*",
     "copy-assets": "copyfiles -a -u 1 \"src/assets/**/*\" dist/",
     "copy-views": "copyfiles -a -u 1 \"src/**/*.html\" dist/",
     "css": "npm-run-all --parallel css-compile* --sequential css-prefix css-minify*",
-    "css-compile": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 8 src/scss/style.scss dist/css/style.css",
+    "css-compile": "node-sass --quiet --output-style expanded --source-map true --source-map-contents true --precision 8 src/scss/style.scss dist/css/style.css",
     "css-compile-vendors": "node build/vendors-sass.js",
     "css-lint": "stylelint --config build/.stylelintrc --syntax scss \"src/scss/**/*.scss\"",
     "css-minify": "cleancss --level 1 --source-map --source-map-inline-sources --output dist/css/style.min.css dist/css/style.css",
@@ -57,28 +58,28 @@
     "js-compile": "cross-env PLUGINS=true babel src/js/ --out-dir dist/js/ --source-maps",
     "js-lint": "eslint src/js/src",
     "js-minify": "foreach -g \"dist/js/**/*.js\" -x \"uglifyjs --compress typeofs=false --mangle  --source-map \"content=src/js/#{name}.js.map,includeSources,url=#{name}.min.js.map\" --output dist/js/#{name}.min.js dist/js/#{name}.js\"",
-    "localhost": "browser-sync start --server \"./dist\" --serveStatic \"./\" --files \"./dist/**/*, !./dist/**/*.html, !./dist/vendors/**/*\"",
+    "localhost": "browser-sync start --server \"./dist\" --serveStatic \"./\" --files \"./dist/\"",
     "localhost-reload": "browser-sync reload",
     "pug": "npm-run-all --parallel pug-*",
-    "pug-dist": "node build/pug.js --src pug/ --dest dist/ --injectVendors false --injectSvg false",
-    "pug-src": "node build/pug.js --src pug/ --dest src/ --injectSvg false",
+    "pug-dist": "node build/pug.js --src pug/ --dest dist/",
+    "pug-src": "node build/pug.js --src pug/ --dest src/",
     "release-version": "node build/change-version.js",
-    "serve": "npm-run-all --sequential build localhost",
-    "svg": "node build/svg.js",
+    "serve": "npm-run-all --sequential build-clean css js copy --parallel localhost watch",
+    "serve-dist": "serve dist",
+    "serve-html": "npm-run-all --sequential build-clean css js copy --parallel localhost watch-assets watch-css watch-html watch-js",
+    "serve-pug": "npm-run-all --sequential build-clean css js copy --parallel localhost watch-assets watch-css watch-pug watch-js",
     "sync-assets": "sync-glob --watch 'src/assets/**/*' dist/assets",
-    "test-dist": "browser-sync start --server \"./dist\"",
-    "watch": "npm run watch-html-source",
-    "watch-pug-source": "npm-run-all --parallel watch-pug sync-assets watch-js watch-css",
-    "watch-html-source": "npm-run-all --parallel sync-assets watch-views watch-js watch-css",
+    "watch": "npm-run-all --parallel watch-*",
+    "watch-assets": "nodemon --watch src/assets -x \"npm run sync-assets\"",
     "watch-css": "nodemon -e scss -x \"npm run css\"",
-    "watch-js": "nodemon -e js -x \"npm run js\"",
-    "watch-pug": "node build/watch-pug.js",
-    "watch-views": "nodemon -e html -x \"npm-run-all --sequential copy-views build-vendors svg localhost-reload\""
+    "watch-html": "nodemon --watch src -e html -x \"npm run copy-views\"",
+    "watch-js": "nodemon --watch src/js -x \"npm run js\"",
+    "watch-pug": "nodemon --watch pug -e pug -x \"npm run pug-dist\""
   },
   "dependencies": {
     "@coreui/chartjs": "^2.0.0",
     "@coreui/coreui": "^3.2.0",
-    "@coreui/icons": "^1.0.1",
+    "@coreui/icons": "^2.0.0-beta.3",
     "@coreui/utils": "^1.2.4",
     "@popperjs/core": "^2.4.0",
     "chart.js": "^2.9.3",
