docs: update version

--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "watch-css": "nodemon -e scss -x \"npm run css\"",
     "watch-html": "nodemon --watch src -e html -x \"npm run copy-views\"",
     "watch-js": "nodemon --watch src/js -x \"npm run js\"",
-    "watch-pug": "nodemon --watch pug -e pug -x \"npm run pug-dist\""
+    "watch-pug": "nodemon --watch pug -e pug -x \"npm run pug-dist\"",
+    "zip": "git archive -o coreui-free-bootstrap-admin-template-v$npm_package_version.zip -9 HEAD"
   },
   "dependencies": {
     "@coreui/chartjs": "^2.0.0",
