chore: update dependencie and devDependencies @coreui/coreui ^4.0.0-alpha.1 → ^4.0.0-alpha.2 @coreui/icons ^2.0.0-beta.3 → ^2.0.0-rc.0

--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     "build-from-pug": "npm-run-all build-clean --parallel css js copy-assets pug-dist --sequential build-vendors",
     "copy": "npm-run-all --parallel copy-*",
     "copy-assets": "copyfiles -a -u 1 \"src/assets/**/*\" dist/",
-    "copy-views": "copyfiles -a -u 1 \"src/views/**/*.html\" dist/",
+    "copy-views": "copyfiles -a -u 2 \"src/views/**/*.html\" dist/",
     "css": "npm-run-all --parallel css-compile* --sequential css-prefix css-minify*",
     "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css --load-path=node_modules/ src/scss/:dist/css/",
     "css-compile-vendors": "node build/vendors-sass.js",
     "css-lint": "stylelint --config build/.stylelintrc --syntax scss \"src/scss/**/*.scss\"",
-    "css-minify": "cleancss --level 1 --source-map --source-map-inline-sources --output dist/css/style.min.css dist/css/style.css",
+    "css-minify": "cleancss -O1 --format breakWith=lf --with-rebase --source-map --source-map-inline-sources --output dist/css/ --batch --batch-suffix \".min\" \"dist/css/*.css\" \"!dist/css/*.min.css\" \"!dist/css/*rtl*.css\"",
     "css-prefix": "postcss --config build/postcss.config.js --replace \"dist/css/*.css\" \"!dist/css/*.min.css\"",
     "js": "npm-run-all --parallel js-compile* ",
     "js-compile": "cross-env PLUGINS=true babel src/js/ --out-dir dist/js/ --source-maps",
@@ -78,8 +78,8 @@
   },
   "dependencies": {
     "@coreui/chartjs": "^2.0.0",
-    "@coreui/coreui": "^4.0.0-alpha.1",
-    "@coreui/icons": "^2.0.0-beta.3",
+    "@coreui/coreui": "^4.0.0-alpha.2",
+    "@coreui/icons": "^2.0.0-rc.0",
     "@coreui/utils": "^1.3.1",
     "chart.js": "^2.9.4",
     "perfect-scrollbar": "1.5.0"
